<resources>
    <string name="app_name">MVP Login</string>
    <string name="login_title">LOGIN</string>
    <string name="sign_in">LOGIN</string>
    <string name="hint_user_pass">Password</string>
    <string name="hint_user_login">Username</string>
    <string name="msg_error_username">Enter your username</string>
    <string name="msg_error_username_max_length">Username max lenth 50</string>
    <string name="msg_error_password_empty">Enter your password</string>
    <string name="msg_error_password_min_max_length">Password lenth must be between 4 and 100</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="restore_password">Restore password</string>
    <string name="restore">Restore</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="valid_email">Enter a valid email</string>
    <string name="cancel">Cancel</string>
    <string name="hint_user_email">Email</string>
    <string name="please_wait">Please wait.</string>
    <string name="restore_password_in_process">Restoring password</string>
    <string name="restore_successful">Check your email and follow the instructions to restore your password.</string>
    <string name="accept">Accept</string>
    <string name="email_not_exist">Email not exist</string>
    <string name="error_restoring_pass">Restore password failed! Please try it later</string>
    <string name="need_account">Create account</string>
    <string name="sign_up">REGISTER</string>
    <string name="sign_up_title">REGISTER</string>
    <string name="sign_up_in_process">Signing up process</string>
    <string name="msg_error_email_empty">Enter your email</string>
    <string name="msg_error_email_not_valid">Enter valid email</string>
    <string name="successful_registration">Registration saved! Please, check your email for confirmation.</string>
    <string name="username_or_email_already_in_use">Username or Email already in use.</string>
    <string name="error_signing_up_common">An error ocurred, please try it later.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="error_signing_in_credentials">Authentication failed! Please check your credentials and try again.</string>
    <string name="error_signing_in_common">An error ocurred, please try it later.</string>
    <string name="log_in_using">Log in using</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="msg_error_sigin_google">Error sign in with Google, please try it later.</string>
    <string name="loggin_in_user">Logging_in</string>
</resources>
