<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_sign_in"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.SignInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/login_title"
        android:textSize="@dimen/large"
        android:layout_alignParentTop="true"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/textView"
        android:layout_marginTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_sign_in_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textEmailAddress|text"
                android:hint="@string/hint_user_login" />

        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_sign_in_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_input_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:hint="@string/hint_user_pass" />

            </android.support.design.widget.TextInputLayout>

            <ToggleButton
                android:id="@+id/sign_in_show_pass"
                android:visibility="gone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center_vertical"
                style="@style/toggleButton"
                android:background="@drawable/ic_toggle_bg"/>
        </FrameLayout>

        <Button
            android:id="@+id/bt_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:elevation="2dp"
            android:foreground="?android:attr/selectableItemBackground"/>ç

        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/text_clickable"
            android:text="@string/forgot_pass"
            android:foreground="?android:attr/selectableItemBackground"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_using"
        android:gravity="center_horizontal"
        android:textSize="@dimen/medium"
        android:id="@+id/textView2"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/tv_sign_up"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/bt_sign_in_twitter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/twitter"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_twitter"
            android:layout_margin="5dp"
            android:foreground="?android:attr/selectableItemBackground"/>

        <ImageButton
            android:id="@+id/bt_sign_in_facebook"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/facebook"
            android:src="@drawable/ic_action_logo_facebook"
            android:layout_margin="5dp"
            android:foreground="?android:attr/selectableItemBackground"/>

        <ImageButton
            android:id="@+id/bt_sign_in_google"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/google"
            android:src="@drawable/ic_action_google_plus_logo"
            android:layout_margin="5dp"
            android:foreground="?android:attr/selectableItemBackground"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_clickable"
        android:text="@string/need_account"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:foreground="?android:attr/selectableItemBackground"/>

</RelativeLayout>
